--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -6,7 +6,11 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  background: #f3f2f2;
+  /* background: #f3f2f2; */
+}
+
+header {
+  color: black;
 }
 
 nav {
