--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,26 +1,13 @@
-html,
 body {
-  height: 100vh;
-  width: 100vw;
-  margin: 0 0;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  /* background: #f3f2f2; */
+  /* background-image: url(https://img.freepik.com/premium-vector/hands-hold-cash-human-arm-give-money-pay-dollar-bill-banknotes-coin-piles-card-phone-app-hand-with-wallet-bag-vector-set-illustration-hand-with-cash-money-banking-card_102902-4294.jpg?w=2000);
+  background-repeat: no-repeat;
+  background-size: cover; */
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
 }
 
-header {
-  color: black;
-}
-
-nav {
-  margin-right: 1em;
-  display: flex;
-}
-
-nav a {
-  text-decoration: none;
-}
 h4 {
   font-size: 24px;
   font-weight: 600;
@@ -66,7 +53,7 @@ input {
   width: 100%;
 }
 
-button {
+.form-button {
   -webkit-appearance: none;
   width: auto;
   min-width: 100px;
@@ -82,4 +69,104 @@ button {
   border: none;
   transition: all .3s ease;
   outline: 0;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+}
+
+.account-card {
+  margin: 30px auto;
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  background: #f3f2f2;
+  justify-items: center;
+}
+
+/* navBar */
+body,
+.nav,
+.menu {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav {
+  position: relative;
+  background-color: #fff;
+  padding: 20px;
+  transition: 0.5s;
+  border-radius: 50px;
+  overflow: hidden;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
+}
+
+.menu {
+  margin: 0;
+  padding: 0;
+  width: 0;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.nav input:checked~.menu {
+  width: 450px;
+}
+
+.menu li {
+  list-style: none;
+  margin: 0 10px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #666;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: 0.5s;
+}
+
+.menu li a:hover {
+  color: #161919;
+}
+
+.nav input {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.nav span {
+  position: absolute;
+  left: 30px;
+  width: 30px;
+  height: 4px;
+  border-radius: 50px;
+  background-color: #666;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.nav input:checked~span {
+  background-color: #f974a1;
+}
+
+.nav span:nth-child(2) {
+  transform: translateY(-8px);
+}
+
+.nav input:checked~span:nth-child(2) {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.nav span:nth-child(3) {
+  transform: translateY(8px);
+}
+
+.nav input:checked~span:nth-child(3) {
+  transform: translateY(0) rotate(45deg);
 }
