--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -16,14 +16,14 @@ h4 {
 }
 
 /* SignIn, SignUp Form */
-label {
+.sign-in .user-container label {
   font-size: 12.5px;
   color: #000;
   opacity: .8;
   font-weight: 400;
 }
 
-form {
+.user-container {
   padding: 40px 30px;
   background: #fefefe;
   display: flex;
@@ -33,7 +33,7 @@ form {
   width: 300px;
 }
 
-input {
+.user-container input {
   font-size: 16px;
   padding: 20px 0px;
   height: 56px;
@@ -72,7 +72,8 @@ input {
   outline: 0;
 }
 
-/* .container {
+
+.container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
 }
@@ -85,94 +86,8 @@ input {
   border-radius: 5px;
   background: #f3f2f2;
   justify-items: center;
-} */
-
-/* navBar */
-
-/* body,
-.nav,
-.menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.nav {
-  position: relative;
-  background-color: #fff;
-  padding: 20px;
-  transition: 0.5s;
-  border-radius: 50px;
-  overflow: hidden;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
-}
-
-.menu {
-  margin: 0;
-  padding: 0;
-  width: 0;
-  overflow: hidden;
-  transition: 0.5s;
-}
-
-.nav input:checked~.menu {
-  width: 450px;
-}
-
-.menu li {
-  list-style: none;
-  margin: 0 10px;
-}
-
-.menu li a {
-  text-decoration: none;
-  color: #666;
-  text-transform: uppercase;
-  font-weight: 600;
-  transition: 0.5s;
-}
-
-.menu li a:hover {
-  color: #161919;
-}
-
-.nav input {
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.nav span {
-  position: absolute;
-  left: 30px;
-  width: 30px;
-  height: 4px;
-  border-radius: 50px;
-  background-color: #666;
-  pointer-events: none;
-  transition: 0.5s;
-}
-
-.nav input:checked~span {
-  background-color: #f974a1;
-}
-
-.nav span:nth-child(2) {
-  transform: translateY(-8px);
-}
-
-.nav input:checked~span:nth-child(2) {
-  transform: translateY(0) rotate(-45deg);
-}
-
-.nav span:nth-child(3) {
-  transform: translateY(8px);
-}
-
-.nav input:checked~span:nth-child(3) {
-  transform: translateY(0) rotate(45deg);
-} */ 
 
 /* Transaction */
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
