--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,11 +1,28 @@
 body {
-  /* background-image: url(https://img.freepik.com/premium-vector/hands-hold-cash-human-arm-give-money-pay-dollar-bill-banknotes-coin-piles-card-phone-app-hand-with-wallet-bag-vector-set-illustration-hand-with-cash-money-banking-card_102902-4294.jpg?w=2000);
-  background-repeat: no-repeat;
-  background-size: cover; */
   margin: 0;
   padding: 0;
   min-height: 100vh;
   font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 150;
+  color: black;
+}
+
+header {
+  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+header nav a {
+  margin: 0 1em;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
 }
 
 h4 {
