--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,18 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
 }
 
-a {
-  text-decoration: none;
-  font-weight: 150;
-  color: black;
-}
-
 header {
-  text-align: center;
+  justify-content: flex-end;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -33,24 +26,24 @@ h4 {
 }
 
 /* SignIn, SignUp Form */
-.sign-in .user-container label {
+form label {
   font-size: 12.5px;
   color: #000;
   opacity: .8;
   font-weight: 400;
 }
 
-.user-container {
+form {
   padding: 40px 30px;
   background: #fefefe;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-bottom: 20px;
-  width: 300px;
+  width: 350px;
 }
 
-.user-container input {
+form input {
   font-size: 16px;
   padding: 20px 0px;
   height: 56px;
@@ -87,9 +80,10 @@ h4 {
   border: none;
   transition: all .3s ease;
   outline: 0;
+  color:#000;
 }
 
-
+/* accounts */
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
@@ -97,7 +91,7 @@ h4 {
 
 .account-card {
   margin: 30px auto;
-  width: 250px;
+  width: 350px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
